--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "dk-cli",
-  "version": "1.0.0",
-  "description": "",
+  "name": "dksetup",
+  "version": "1.0.35",
+  "description": "A CLI toolkit for DK-CLI.",
   "main": "index.js",
+  "bin": {
+    "dksetup": "index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm version patch --no-git-tag-version && npm publish"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Dannan <your-email@example.com>",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "chalk": "^5.6.2",
