--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "dksetup",
-  "version": "1.0.43",
+  "version": "1.0.51",
   "description": "A CLI toolkit for DK-CLI.",
   "main": "index.js",
   "bin": {
     "dksetup": "index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "npm version patch --no-git-tag-version && npm publish"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Dannan <your-email@example.com>",
