--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "dksetup",
   "version": "1.0.52",
   "description": "A CLI toolkit for DK-CLI.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
-    "dksetup": "index.js"
+    "dksetup": "dist/index.js"
   },
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
